--- a/assessment/2223-fund-data-analysis-assessment.tex
+++ b/assessment/2223-fund-data-analysis-assessment.tex
@@ -34,25 +34,25 @@ This assessment has three overlapping components, as follows.
   \item Your repository should be presentable in job interviews.
   \item Include an informative and concise README.
   \item Organize your repository --- no unnecessary files or clutter.
-  \item Work regularly, adding regular reasonably-sized commits.
+  \item Work regularly, adding reasonably-sized commits.
 \end{itemize}
 
-\newthought{Shannon Entropy Notebook $(40\%)$:}
+\newthought{Regular tasks $(40\%)$:}
 \begin{itemize}
-  \item Create a notebook about Shannon entropy.
+  \item The lecture notes suggest concepts you should explore\footnote{The lecture notes themselves are presented in Jupyter notebooks.}.
+  \item You should complete these in notebooks each week\footnote{You don't need to have a notebook for each individual small topic. It is up to you to choose how you organize the notebooks. Aim for one notebook per topic.}.
+  \item Plots explaining main concepts.
+  \item Code demonstrating key algorithms.
+  \item Well-written explanations\footnote{Pitch all your work at your classmates as the audience.}.
+\end{itemize} 
+
+\newthought{Normal Distribution Notebook $(40\%)$:}
+\begin{itemize}
+  \item Create a notebook about the normal distribution.
   \item Define and explain the main concepts.
   \item Pitch the notebook at your classmates.
   \item Use visuals like plots to explain concepts.
 \end{itemize}
-
-\newthought{Outlier Identification Notebook $(40\%)$:}
-\begin{itemize}
-  \item Create a notebook about outlier identification in data sets.
-  \item Describe the different kinds of outliers that might be present in a data set.
-  \item Source an example data set online and identify and deal with any outliers that might be present.
-  \item Explain the role bias might play in outlier identification.
-  \item Well-written explanations\footnote{Pitch all your work at your classmates as the audience.}.
-\end{itemize} 
 
 
 \section{Marking Scheme}
