--- a/introduction/2223-fund-data-analysis-intro.tex
+++ b/introduction/2223-fund-data-analysis-intro.tex
@@ -18,10 +18,10 @@ An introduction to the fundamentals of data analysis, including the acquisition,
 On completion of this module the learner will/should be able to:
 
 \begin{enumerate}
-\item Source and investigate sets of data.
-\item Programmatically explore and visualize data.
-\item Apply basic mathematical data analysis techniques to data sets.
-\item Write programs to automate basic data analysis techniques.
+  \item Explore and visualize data.
+  \item Source and investigate sets of data.
+  \item Apply basic mathematical data analysis techniques to data sets.
+  \item Write programs to automate basic data analysis techniques.
 \end{enumerate}
 
 
@@ -44,6 +44,7 @@ Assessment is in the form of a portfolio\footnote{The portfolio will be in the f
   \item It is worth discussing in the Moodle forums what you as a class would like to work on. Just keep in mind that everyone will want something different. Also, remember that there is one lecturer and dozens of students in each of several modules. Time is limited, we will have to be careful about scope creep.
 \end{itemize}
 
+\newpage
  
 \section{Lectures and Practicals}
 
@@ -59,11 +60,11 @@ Assessment is in the form of a portfolio\footnote{The portfolio will be in the f
 We will start with a plan to cover these five topics.
 
 \begin{description}
-  \item[Randomness]: Data and stochasticism.
-  \item[Information:] Shannon entropy.
-  \item[Bias:] Cognitive and statistical.
-  \item[Outliers:] Identifying outliers in data.
-  \item[Cleansing:] Fixing anomalies and inconsistencies.
+  \item[Information:] codes and information content.
+  \item[Randomness]: probabilities and frequencies.
+  \item[Distributions:] trends and statistics.
+  \item[Bias:] statistical and cognitive.
+  \item[Cleansing:] anomalies and outliers.
 \end{description}
 
 
