--- a/notebooks/01-information.ipynb
+++ b/notebooks/01-information.ipynb
@@ -1388,7 +1388,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fire Alarms\n",
+    "<h2 style=\"color: rgb(0, 91, 94);\">Fire Alarms</h2>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
     "\n",
     "Consider the information you get from a domestic fire alarm.\n",
     "\n",
