--- a/notebooks/02-randomness.ipynb
+++ b/notebooks/02-randomness.ipynb
@@ -1300,6 +1300,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eacab0fb",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "Plot bar charts or histograms of any three different distributions listed at the following link:\n",
+    "\n",
+    "https://numpy.org/doc/stable/reference/random/generator.html#distributions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "11814fc6-2899-49c7-839c-002f19789dd6",
    "metadata": {},
    "source": [
