--- a/notebooks/03-bias.ipynb
+++ b/notebooks/03-bias.ipynb
@@ -4,28 +4,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color: rgb(0, 91, 94);\">JupyterLite</h1>\n",
+    "<h1 style=\"color: rgb(0, 91, 94);\">Bias</h1>\n",
     "\n",
     "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
     "\n",
     "\n",
-    "In this notebook, you will learn about JupyterLite. Once you get to the end you should be able to:\n",
     "\n",
-    "1. Describe the architecture of JupyterLite.\n",
-    "2. Define some use cases of Web Assembly.\n",
-    "3. Deploy a JupyterLite site.\n",
-    "4. Adapt JupyterLite and Pyodide to your needs."
+    "In this notebook, you will learn about bias - statistical and cognitive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Numerical arrays.\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color: rgb(0, 91, 94);\">GitHub Repository</h2>\n",
+    "<h2 style=\"color: rgb(0, 91, 94);\">Cognitive Bias</h2>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise 1</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
+    "\n",
+    "Give three real-world examples of different types of cognitive bias.\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color: rgb(0, 91, 94);\">Statistical Bias</h2>\n",
     "\n",
     "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
     "\n",
-    "- Hello world"
+    "Two of the common calculations you will find in the statistics literature are mean and standard deviation.\n",
+    "\n",
+    "The mean is straight-forward - it is the usual calculation that people call the average.\n",
+    "\n",
+    "You take all of the numbers you have, add them up, and then divide by the number of them.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "Suppose you take a sample of values from a larger population of values.\n",
+    "\n",
+    "If you take the mean of the sample, it is a good estimate of the population average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The standard deviation is a different story.\n",
+    "\n",
+    "First of all, the calculation is not as familiar.\n",
+    "\n",
+    "It is designed to give a measure of how far the numbers are away from the mean in general.\n",
+    "\n",
+    "The need for a such a measure is seen in the following example of calculating the mean of two sets of numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A list of nubmers - four small and one big.\n",
+    "numbers1 = np.array([1, 1, 1, 1, 10])\n",
+    "# Their mean.\n",
+    "np.mean(numbers1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A list of numbers - all close to each other.\n",
+    "numbers2 = np.array([2, 2, 3, 3, 4])\n",
+    "# Their mean.\n",
+    "np.mean(numbers2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above simple example illustrates a common issue.\n",
+    "\n",
+    "The mean on its own does not tell us how close the numbers are to the mean.\n",
+    "\n",
+    "That is why we use the standard deviation - it gives us a measure of the spread."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise 2</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
+    "\n",
+    "Show that the difference between the standard deviation calculations is greatest for small sample sizes.\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />"
    ]
   },
   {
