--- a/notebooks/05-cleansing.ipynb
+++ b/notebooks/05-cleansing.ipynb
@@ -4,28 +4,103 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color: rgb(0, 91, 94);\">JupyterLite</h1>\n",
+    "<h1 style=\"color: rgb(0, 91, 94);\">Data Cleansing</h1>\n",
     "\n",
     "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
     "\n",
     "\n",
-    "In this notebook, you will learn about JupyterLite. Once you get to the end you should be able to:\n",
+    "In this notebook, you will learn about data cleansing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "1. Describe the architecture of JupyterLite.\n",
-    "2. Define some use cases of Web Assembly.\n",
-    "3. Deploy a JupyterLite site.\n",
-    "4. Adapt JupyterLite and Pyodide to your needs."
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color: rgb(0, 91, 94);\">GitHub Repository</h2>\n",
+    "<h2 style=\"color: rgb(0, 91, 94);\">Not a Number</h2>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color: rgb(0, 91, 94);\">Search and Replace</h2>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise 1</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
+    "\n",
+    "Write a Python function to remove all non-alphanumeric characters from a string.\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h2 style=\"color: rgb(0, 91, 94);\">Codepages</h2>\n",
     "\n",
     "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
     "\n",
-    "- Hello world"
+    "Hello, world!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: #001a79;\">Exercise 2</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
+    "\n",
+    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
+    "\n",
+    "Adapt the above code and plots so that the overall plot is inversely propertional and the individual groups are directly rpoportional.\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid #001a79;\" />"
    ]
   },
   {
@@ -55,6 +130,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
