--- a/notebooks/03-bias.ipynb
+++ b/notebooks/03-bias.ipynb
@@ -30,15 +30,219 @@
     "<h2 style=\"color: rgb(0, 91, 94);\">Cognitive Bias</h2>\n",
     "\n",
     "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
-    "\n"
+    "\n",
+    "*The hope for informed gossip is that there are distinctive patterns in the errors people make. Systematic errors are known as biases, and they recur predictably in particular circumstances. When the handsome and confident speaker bounds onto the stage, for example, you can anticipate that the audience will judge his comments more favorably than he deserves. The availability of a diagnostic label for this bias—the halo effect—makes it easier to anticipate, recognize, and understand.*\n",
+    "\n",
+    "-- Kahneman; Thinking Fast and Slow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a style=\"color: #ff791e\" href=\"https://github.com/ianmcloughlin/papers/raw/master/tversky-kahneman-heuristics-biases.pdf\"><i>Judgment under Uncertainty: Heuristics and Biases;</i></a><br>Amos Tversky and Daniel Kahneman; Science, New Series, Vol. 185, No. 4157. (Sep. 27, 1974), pp. 1124-1131.\n",
+    "\n",
+    "<a style=\"color: #ff791e\" href=\"https://github.com/ianmcloughlin/papers/raw/master/tversky-kahneman-framing-of-decisions.pdf\"><i>The Framing of Decisions and the Psychology of Choice;</i></a><br>Amos Tversky and Daniel Kahneman; Science, Vol. 211, 30 January 1981.\n",
+    "\n",
+    "<a style=\"color: #ff791e\" href=\"https://github.com/ianmcloughlin/papers/raw/master/kruger-dunning-ones-incompetence.pdf\"><i>Unskilled and Unaware of It: How Difficulties in Recognizing One's Own Incompetence Lead to Inflated Self-Assessments;</i></a><br>Justin Kruger and David Dunning; Psychology, 2009, 1, 30-46.\n",
+    "\n",
+    "<a style=\"color: #ff791e\" href=\"https://plato.stanford.edu/entries/aristotle-rhetoric/\"><i>Aristotle’s Rhetoric;</i></a><br>Stanford Encyclopedia of Philosophy\n",
+    "\n",
+    "<a style=\"color: #ff791e\" href=\"https://github.com/ianmcloughlin/papers/raw/master/lousville-logos-pathos-ethos-kairos.pdf\"><i>Logos, Ethos, Pathos, Kairos;</i></a><br>University of Louisville Writing Center."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color: rgb(0, 91, 94);\">Guessing Game</h3>\n",
+    "\n",
+    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
+    "\n",
+    "Below is some code that you shouldn't try to understand for now.\n",
+    "\n",
+    "The game is to, in English, give a precise rule that describes when the function returns True."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This code is obfuscated on purpose.\n",
+    "import operator as o__\n",
+    "\n",
+    "def test(L):\n",
+    "    return True if o__.__ge__(0b10001, len(L) * 2 + sum([i - 0b10 for i in L])) and all([o__.__ge__(L[::-1][i], L[::-1][i+0b1]) for i in range(len(L)-1)]) else False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, we can repeatedly call the function as follows, with different lists of integers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([3, 2, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 2, 3, 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 3, 2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So what is the rule?\n",
+    "\n",
+    "How confident are you that that is the rule?\n",
+    "\n",
+    "Let's test your rule.\n",
+    "\n",
+    "Tell me what the outputs of the following code should be."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test([2, 3, 5, 10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that the point here is to think about your confidence in your answer and how you got confident."
+   ]
   },
   {
    "cell_type": "markdown",
