--- a/notebooks/03-bias.ipynb
+++ b/notebooks/03-bias.ipynb
@@ -368,6 +368,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Excel\n",
+    "\n",
+    "***\n",
+    "\n",
+    "See the following warning on the official STDEV function documentation for Excel:\n",
+    "\n",
+    "*Important: This function has been replaced with one or more new functions that may provide improved accuracy and whose names better reflect their usage. Although this function is still available for backward compatibility, you should consider using the new functions from now on, because this function may not be available in future versions of Excel.*\n",
+    "\n",
+    "https://support.microsoft.com/en-us/office/stdev-function-51fecaaa-231e-4bbb-9230-33650a72c9b0\n",
+    "\n",
+    "The functions replacing it are STDEVP and STDEV.S:\n",
+    "\n",
+    "https://support.microsoft.com/en-us/office/stdev-s-function-7d69cf97-0c1f-4acf-be27-f3e83904cc23\n",
+    "\n",
+    "https://support.microsoft.com/en-us/office/stdevp-function-1f7c1c88-1bec-4422-8242-e9f7dc8bb195"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<h3 style=\"color: #001a79;\">Exercise 2</h3>\n",
     "\n",
     "<hr style=\"border-top: 1px solid #001a79;\" />\n",
