--- a/notebooks/05-cleansing.ipynb
+++ b/notebooks/05-cleansing.ipynb
@@ -4,32 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"color: rgb(0, 91, 94);\">Data Cleansing</h1>\n",
+    "# Data Cleansing\n",
     "\n",
-    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
-    "\n",
-    "\n",
-    "In this notebook, you will learn about data cleansing."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2 style=\"color: rgb(0, 91, 94);\">Not a Number</h2>\n",
-    "\n",
-    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n"
+    "***"
    ]
   },
   {
@@ -43,34 +20,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color: rgb(0, 91, 94);\">Search and Replace</h2>\n",
+    "## Exercise 1\n",
     "\n",
-    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style=\"color: #001a79;\">Exercise 1</h3>\n",
+    "***\n",
     "\n",
-    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
-    "\n",
-    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
+    "*Remember to do these exercises in your own notebook in your assessment repository.*\n",
     "\n",
     "Write a Python function to remove all non-alphanumeric characters from a string.\n",
     "\n",
@@ -81,35 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 style=\"color: rgb(0, 91, 94);\">Codepages</h2>\n",
+    "***\n",
     "\n",
-    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
-    "\n",
-    "Hello, world!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h3 style=\"color: #001a79;\">Exercise 2</h3>\n",
-    "\n",
-    "<hr style=\"border-top: 1px solid #001a79;\" />\n",
-    "\n",
-    "<i style=\"color: #001a79;\">Remember to do these exercises in your own notebook in your assessment repository.</i>\n",
-    "\n",
-    "Adapt the above code and plots so that the overall plot is inversely propertional and the individual groups are directly rpoportional.\n",
-    "\n",
-    "<hr style=\"border-top: 1px solid #001a79;\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr style=\"border-top: 1px solid rgb(0, 91, 94);\" />\n",
-    "\n",
-    "<h2 style=\"color: rgb(0, 91, 94);\">End</h2>"
+    "## End"
    ]
   }
  ],
@@ -129,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
